--- a/src/Componentes/Menu/menu.styles.css
+++ b/src/Componentes/Menu/menu.styles.css
@@ -2,14 +2,14 @@
     display: flex;
     justify-content: space-evenly;
     overflow: hidden;
-    background: white;
+    background: rgb(226, 198, 174);
     font-size: 24px;
     padding: 20px;
-    box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+    box-shadow: 0 2px 4px 0 rgba(105, 98, 98, 0.2);
   }
   
   .navbar a {
-    color:#E79A80;
+    color:#e75322;
     text-align: center;
     text-decoration: none;
   }
