--- a/src/Componentes/Menu/menu.styles.css
+++ b/src/Componentes/Menu/menu.styles.css
@@ -6,8 +6,9 @@
     font-size: 24px;
     padding: 20px;
     box-shadow: 0 2px 4px 0 rgba(105, 98, 98, 0.2);
-  }
-  
+    width: auto;
+    height:40 px;
+}
   .navbar a {
     color:#e75322;
     text-align: center;
